# university

./: .gitignore  README.md
2_semestre/Probabilita_Statistica/: Tutorial_R_1.rmd  Tutorial_R_2.rmd
SoftwareEngineering/D1-G19/: main.tex
SoftwareEngineering/D1-G19/Chapter/: 0paginaIniziale.tex  1Obiettivi.tex  2RF.tex  3RNF.tex  4FrontEnd.tex  5BackEnd.tex  6SintesiDiscussione.tex
SoftwareEngineering/D2-G19/: main.tex
SoftwareEngineering/D2-G19/Chapter/: 0paginaIniziale.tex  1ReqFunzionali.tex  2ReqNonFunzionali.tex
SoftwareEngineering/D3-G19/: main.tex
SoftwareEngineering/D3-G19/Chapter/: 0paginaIniziale.tex  1AnalisiDiContesto.tex  (+1 more)
SoftwareEngineering/D4-G19/: main.tex
SoftwareEngineering/D5-G19/: main.tex
SoftwareEngineering/D6-G19/: main.tex
advancedProgramming/exercises/: 2022-10-11-v1.md  2022-10-11-v2.md
advancedProgramming/lessons/: Cargo.toml  main.rs
advancedProgramming/lessons/classes/: c01_basic.rs  c02_ownership.rs  c04_structs.rs  c05_modules.rs  c07_lifetimes.rs  c08_traits.rs  c11_heap.rs  c12_fp.rs  mod.rs
advancedProgramming/lessons/dependencies/leaflib/: Cargo.toml
advancedProgramming/lessons/dependencies/leaflib/src/: lib.rs
advancedProgramming/lessons/dependencies/libtest/: Cargo.toml
advancedProgramming/lessons/dependencies/libtest/src/: lib.rs
advancedProgramming/lessons/dependencies/libtest/src/subdir/: mod.rs  subfun.rs
advancedProgramming/lessons/full_files/: c02_ownership.rs  mod.rs
ethicalHacking/: README.md
ethicalHacking/reports/: report-ROP5-248493-Luigi_DellEva.md  report-echo-248493-Luigi_DellEva.md
(+123 files in other folders)
